<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacer"
    tools:context=".QuestionActivity">

    <TextView
        android:id="@+id/tv_question_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_question"
        android:textSize="40sp"
        android:textStyle="italic"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/spacer"/>

    <Button
        android:id="@+id/btn_question_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_btn_green"
        android:backgroundTint="@color/vert"
        />

    <Button
        android:id="@+id/btn_question_purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_btn_purple"
        android:backgroundTint="@color/mauve"
        />

    <Button
        android:id="@+id/btn_question_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_btn_blue"
        android:backgroundTint="@color/bleu"
        />

    <Button
        android:id="@+id/btn_question_none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/title_btn_none"
        android:backgroundTint="@color/black"
        />

</LinearLayout>